feat(server): 쿠폰 상세 조회시 수정 제한하는 값 추가 #202
